force-app/main/default/objects/Resident_Inspector__c/Resident_Inspector__c.object-meta.xml
<CustomObject>
    <description>Listing of Customer Resident Inspectors</description>
    <label>Resident Inspector</label>
    <nameField>
        <displayFormat>Inspector {0}</displayFormat>
        <label>Resident Inspector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resident Inspectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>