force-app/main/default/objects/Resident_Inspector__c/fields/Authorized_to_Ship__c.field-meta.xml
<CustomField>
    <fullName>Authorized_to_Ship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized to Ship</label>
    <type>Checkbox</type>
</CustomField>