force-app/main/default/objects/Resident_Inspector__c/fields/Inspection_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_End_Date__c</fullName>
    <label>Inspection End Date</label>
    <type>Date</type>
</CustomField>