force-app/main/default/objects/Resident_Inspector__c/fields/Inspection_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Start_Date__c</fullName>
    <label>Inspection Start Date</label>
    <type>Date</type>
</CustomField>