force-app/main/default/objects/Resident_Inspector__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders Inspected</relationshipLabel>
    <relationshipName>Resident_Inspectors</relationshipName>
    <type>Lookup</type>
</CustomField>