force-app/main/default/objects/Resident_Inspector__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Resident Inspectors</relationshipLabel>
    <relationshipName>Resident_Inspectors</relationshipName>
    <type>Lookup</type>
</CustomField>